<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/framehome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Ui.MainActivity">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.CardView
                android:id="@+id/cardMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="8dp">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >

                <TextView
                        android:id="@+id/mainTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/tltle"
                        android:layout_marginTop="8dp"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/tvCategory"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
                <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvCategory"
                        android:paddingTop="8dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/spCategory"
                        app:layout_constraintStart_toStartOf="parent"/>
                <Spinner
                        android:id="@+id/spCategory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintHorizontal_weight="4"
                        app:layout_constraintTop_toBottomOf="@+id/tvCategory"
                        app:layout_constraintEnd_toEndOf="@id/progressBar"
                        app:layout_constraintBottom_toTopOf="@+id/tvDifficulty"
                        app:layout_constraintStart_toStartOf="parent">
                </Spinner>

                <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvCategory"
                        android:layout_height="wrap_content"
                        app:layout_constraintHorizontal_weight="1"
                        android:indeterminate="true"

                />

                <TextView
                        android:id="@+id/tvDifficulty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tvDifficulty"
                        android:paddingTop="8dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        app:layout_constraintTop_toBottomOf="@+id/spCategory"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/spDifficulty"
                        app:layout_constraintStart_toStartOf="parent"/>
                <Spinner
                        android:id="@+id/spDifficulty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvDifficulty"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/tvType"
                        app:layout_constraintStart_toStartOf="parent">
                </Spinner>
                <TextView
                        android:id="@+id/tvType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/tvType"
                        android:paddingTop="8dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        app:layout_constraintTop_toBottomOf="@+id/spDifficulty"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/spType"
                        app:layout_constraintStart_toStartOf="parent"/>
                <Spinner
                        android:id="@+id/spType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvType"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">
                </Spinner>

            </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

        <TextView
                android:id="@+id/tvQuestionCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorRed"
                android:paddingTop="8dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:layout_constraintTop_toBottomOf="@+id/cardMain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/tvView_question_count"/>

        <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
        />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>

